# Starky

./: Cargo.toml  README.md
component/: Cargo.toml
component/src/: block.rs  main.rs
crates/: Cargo.toml
crates/db/: Cargo.toml
crates/db/src/: lib.rs  model.rs  schema.rs
crates/listener/: Cargo.toml
crates/listener/src/: lib.rs
crates/src/: main.rs
postgres/: init.sql
