[workspace]

members = ["crates", "crates/listener", "crates/db"]

[workspace.dependencies]
starknet = "0.6.0"
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
listener = { path = "crates/listener" }
db = { path = "crates/db" }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
