[package]
name = "component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.4"
url = "2.3.1"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "master" }
tokio = {version = "1.28.0", features = ["full"] }
thiserror = "1.0.40"
serde_json = "1.0.96"
