[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
diesel_migrations = "2.1.0"
lazy_static = "1.4.0"
thiserror = "1.0.44"
chrono = "0.4.31"
dotenv.dependencies = true
