[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.dependencies = true
url.dependencies = true
tokio.dependencies = true
serde.dependencies = true
serde_json.dependencies = true
serde_derive.dependencies = true
chrono = "0.4.31"
db = { path = "../db" }
